# xenon

./: .dockerignore  .editorconfig  .envrc  .gitignore  Cargo.toml  LICENSE-MIT  commitlint.config.js  default.nix  flake.nix  rust-toolchain.toml  shell.nix  treefmt.toml
.github/: dependabot.yaml
.github/workflows/: lints.yaml  nix.yaml  release.yaml  rust.yaml  tokei.yaml
dev-support/containers/: docker-bake.hcl
dev-support/containers/debian/: Dockerfile
dev-support/containers/distroless/: Containerfile
dev-support/containers/scratch/: Containerfile  Dockerfile
dev-support/lib/: toolchain
devshell/: container.nix  default.nix  format.nix  package.nix
src/: main.rs
src/cli/: mod.rs
src/cli/cryptocurrency_price/: error.rs  mod.rs
src/cli/myip/: error.rs  mod.rs
src/cli/rename/: error.rs  mod.rs
