[package]
name = "xenon"
version = "0.1.0"
authors = ["xrelkd <46590321+xrelkd@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/xrelkd/xenon"
keywords = ["rename file"]
categories = ["accessibility"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

hyper = { version = "0.14", features = ["client", "http1", "tcp"] }

rustyline = "9"

clap = { version = "3", features = ["derive", "env"] }
clap_complete = "3"
snafu = "0.7"

