[package]
name = "xenon"
version = "0.3.0"
authors = ["xrelkd <46590321+xrelkd@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/xrelkd/xenon"
description = "Xenon"
keywords = ["rename file"]
categories = ["accessibility"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

reqwest = { version = "0.11", features = ["json"] }

rustyline = "9"

clap = { version = "3", features = ["derive", "env"] }
clap_complete = "3"
serde_json = "1"
snafu = "0.7"
url = "2"

